[package]
name = "riscv-wifi"
version = "0.1.0"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0"
enumset = "1.1.3"
esp-idf-hal = "0.44.1"
esp-idf-sys = { version = "0.35.0", features = ["binstart"] }
esp-idf-svc = { version = "0.49.1", features = ["experimental", "alloc"] }
heapless = "0.8.0"
log = "0.4"

[build-dependencies]
embuild = "0.32.0"
